# python-project-template

./: Pipfile  README.md  cookiecutter.json
{{cookiecutter.distribution}}/: Pipfile  README.md  setup.cfg
{{cookiecutter.distribution}}/docs/: conf.py  index.rst
{{cookiecutter.distribution}}/src/{{cookiecutter.package}}/: __init__.py
{{cookiecutter.distribution}}/tests/: test_{{cookiecutter.package}}.py
{{cookiecutter.module}}/: Pipfile  setup.py
{{cookiecutter.module}}/docs/: conf.py  index.rst
