[metadata]
name = {{cookiecutter.distribution}}
version = attr: src.VERSION
author= {{cookiecutter.author}}
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = {{cookiecutter.license}}
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:

tests_require=
   pytest
   pytest-cov
   pytest-flake8
setup_rqeuires=
   pytest-runner


[aliases]

# use pytest-runner as default test runner
test=pytest

[tool:pytest]

# options to py.test executable
addopts=
   --cov {{cookiecutter.package}}
   --cov tests
   --cov-report html
   --cov-report term
   --durations=5
   --doctest-package

# places to look for tests, look in package folder and test folder
testpaths = {{cookiecutter.package}} tests

[coverage:run]
# measure branch coverage, too
branch = True

[coverage:report]
exclude_lines =
    raise AssertionError
    raise NotImplementedError

    if 0:
    if __name__ == .__main__.:

ignore_errors = True

[coverage:html]
directory = coverage_html_report
